@@ -1,11 +1,8 @@
 package com.sequenceiq.cloudbreak.service.eventbus;
 
-import static com.sequenceiq.cloudbreak.common.exception.NotFoundException.notFound;
-
 import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.atomic.AtomicInteger;
-import java.util.stream.Collectors;
 
 import jakarta.inject.Inject;
 
@@ -50,9 +47,9 @@ public class CloudResourcePersisterService implements Persister<ResourceNotifica
                     resourceService.save(resource);
                     return resource;
                 })
-                .collect(Collectors.toList());
+                .toList();
         if (cloudResources.size() != resources.size()) {
-            LOGGER.debug("There are {} resource(s) which won't be save", cloudResources.size() - resources.size());
+            LOGGER.debug("There are {} resource(s) which won't be saved", cloudResources.size() - resources.size());
         }
         return notification;
     }
@@ -64,9 +61,12 @@ public class CloudResourcePersisterService implements Persister<ResourceNotifica
         Stack stack = findStackById(stackId);
         List<CloudResource> cloudResources = notification.getCloudResources();
         cloudResources.forEach(cloudResource -> {
-            Resource persistedResource = getPersistedResource(stackId, cloudResource)
-                    .orElseThrow(notFound("resource", cloudResource.getName()));
             Resource resource = cloudResourceToResourceConverter.convert(cloudResource);
+            Resource persistedResource = getPersistedResource(stackId, cloudResource)
+                    .orElseGet(() -> {
+                        LOGGER.debug("Resource {} not found in DB, creating a new one", cloudResource.getName());
+                        return resource;
+                    });
             updateWithPersistedFields(resource, persistedResource);
             setStack(stack, cloudResource, resource);
             resourceService.save(resource);
@@ -95,7 +95,7 @@ public class CloudResourcePersisterService implements Persister<ResourceNotifica
     }
 
     private void updateWithPersistedFields(Resource resource, Resource persistedResource) {
-        if (persistedResource != null) {
+        if (persistedResource != null && !persistedResource.equals(resource)) {
             resource.setId(persistedResource.getId());
             resource.setInstanceGroup(persistedResource.getInstanceGroup());
         }
